// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CleverIntegrationContainer when access is full it should render 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="integration-container"
    >
      <img
        alt=""
        class="logo"
        src="undefined/images/pages/administrator/integrations/clever_logo.svg"
      />
      <h1>
        Streamline teaching with Clever
      </h1>
      <p>
        Make teaching at your school even more effective with our seamless Clever integration. With this integration, teachers at your school or district can:
      </p>
      <ul>
        <li>
          <img
            alt=""
            src="undefined/images/pages/administrator/integrations/circle-check.svg"
          />
          Seamlessly import Clever rosters.
        </li>
        <li>
          <img
            alt=""
            src="undefined/images/pages/administrator/integrations/circle-check.svg"
          />
          Automatically create and sync Clever student accounts.
        </li>
      </ul>
      <p>
        You can also access Clever Secure Sync as part of your subscription. This makes the integration even more powerful and easy to configure.
      </p>
      <div
        class="links"
      >
        <a
          href="https://support.quill.org/en/articles/8500172-how-to-choose-your-rostering-integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          How to choose your integration
        </a>
        <a
          href="https://support.quill.org/en/articles/8461682-how-do-i-set-up-clever-secure-sync-for-my-school-district-for-clever-quill-administrators"
          rel="noopener noreferrer"
          target="_blank"
        >
          How to set up this integration
        </a>
      </div>
      <div
        class="integration-tip"
      >
        <div>
          <h2>
            Integration Tip
          </h2>
          <p>
            Start the school year right by choosing a single integration. Changing mid-year can cause rostering challenges and may take up more of your valuable time, so decide upfront for a better experience.
          </p>
        </div>
        <img
          alt=""
          src="undefined/images/pages/administrator/integrations/lightbulb.svg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CleverIntegrationContainer when access is restricted it should render 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="integration-container"
    >
      <img
        alt=""
        class="logo"
        src="undefined/images/pages/administrator/integrations/clever_logo.svg"
      />
      <h1>
        Streamline teaching with Clever
      </h1>
      <p>
        Make teaching at your school even more effective with our seamless Clever integration. With this integration, teachers at your school or district can:
      </p>
      <ul>
        <li>
          <img
            alt=""
            src="undefined/images/pages/administrator/integrations/circle-check.svg"
          />
          Seamlessly import Clever rosters.
        </li>
        <li>
          <img
            alt=""
            src="undefined/images/pages/administrator/integrations/circle-check.svg"
          />
          Automatically create and sync Clever student accounts.
        </li>
      </ul>
      <p>
        You can also subscribe to School or District Premium to access Clever Secure Sync. This makes the integration even more powerful and easy to configure.
      </p>
      <div
        class="links"
      >
        <a
          href="/premium"
          rel="noopener noreferrer"
          target="_blank"
        >
          Explore premium
        </a>
        <a
          href="https://support.quill.org/en/articles/8500172-how-to-choose-your-rostering-integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          How to choose your integration
        </a>
        <a
          href="https://support.quill.org/en/articles/8461682-how-do-i-set-up-clever-secure-sync-for-my-school-district-for-clever-quill-administrators"
          rel="noopener noreferrer"
          target="_blank"
        >
          How to set up this integration
        </a>
      </div>
      <div
        class="integration-tip"
      >
        <div>
          <h2>
            Integration Tip
          </h2>
          <p>
            Start the school year right by choosing a single integration. Changing mid-year can cause rostering challenges and may take up more of your valuable time, so decide upfront for a better experience.
          </p>
        </div>
        <img
          alt=""
          src="undefined/images/pages/administrator/integrations/lightbulb.svg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
